<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/judul_film"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:textAlignment="center"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="Genre Film"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="@dimen/small_text"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="Tanggal Rilis"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tgl_terbit" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="Sinopsis Film"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sinopsis_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sinopsis_film"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>
</ScrollView>